# Staking-program

./: Anchor.toml  Cargo.toml
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
